Add OpenRouter API integration for video transcript summarization and refactor DTOs